Mobile ad with two slides animated with GSAP

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "stellar-soft-mobile-ad",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.3.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -11,9 +11,12 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.2",
 		"gsap": "^3.12.7",
+		"prop-types": "^15.8.1",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-router-dom": "^7.2.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.20.0",
